feat: Add navigation component and restructure layout
- Introduced a new Navigation component for consistent site navigation.
- Updated the RootLayout to include the Navigation component and structured the layout for better responsiveness.
- Created a Locations page to display all game locations with Pokémon availability.
- Added a LocationDetail page to show detailed encounter information for each Pokémon in a specific location.
- Enhanced the Pokémon Detail page to include location data and improved data loading efficiency.
- Refactored the Home page to provide a welcoming introduction and links to the Pokémon Database and Location Guide.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "extract": "ts-node extract_pokemon_data.ts"
+    "extract": "ts-node extract_pokemon_data.ts && ts-node extract_location_data.ts"
   },
   "dependencies": {
     "next": "15.3.5",
