feat: update Pokémon forms with specific type data and enhance base data for Alolan and Hisuian forms

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,21 @@
 {
   "editor.formatOnSave": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "cSpell.words": [
+    "ALOLAN",
+    "Alph",
+    "evos",
+    "galar",
+    "hisui",
+    "Hisuian",
+    "IVYSAUR",
+    "Meowth",
+    "NIDOQUEEN",
+    "Pokedex",
+    "PSYBEAM",
+    "Raichu",
+    "Sinjoh",
+    "spdef",
+    "Tauros"
+  ]
 }
