--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "extract": "ts-node extract_pokemon_data.ts && ts-node extract_location_data.ts",
+    "extract": "ts-node extract_pokemon_data.ts",
     "crop": "ts-node crop_top_sprite.ts"
   },
   "dependencies": {
