--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
@@ -27,6 +29,7 @@
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "pngjs": "^7.0.0",
+    "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sharp": "^0.34.2",
