--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.4",
     "sharp": "^0.34.2",
     "tailwind-merge": "^3.3.1"
   },
