--- a/output/pokemon/sneasel.json
+++ b/output/pokemon/sneasel.json
@@ -799,7 +799,7 @@
     "description": "Its sturdy claws are ideal for traversing cliffs. These claws drip venom that infiltrates its prey."
   },
   "forms": {
-    " Hisuian": {
+    "Hisuian": {
       "evolution": {
         "methods": [],
         "chain": [
@@ -1079,7 +1079,78 @@
       "formName": " Hisuian"
     },
     "hisuian": {
+      "baseStats": {
+        "hp": 55,
+        "attack": 95,
+        "defense": 55,
+        "speed": 115,
+        "specialAttack": 35,
+        "specialDefense": 75,
+        "total": 430
+      },
+      "catchRate": 60,
+      "baseExp": 132,
+      "heldItems": [
+        "GRIP_CLAW",
+        "QUICK_CLAW"
+      ],
+      "genderRatio": {
+        "male": 50,
+        "female": 50
+      },
+      "hatchRate": "Medium-Fast (5,120 steps)",
+      "abilities": [
+        {
+          "name": "Inner Focus",
+          "description": "\tProtects it from \tflinching.",
+          "isHidden": false,
+          "abilityType": "primary"
+        },
+        {
+          "name": "Keen Eye",
+          "description": "\tPrevents foes from \tlowering accuracy.",
+          "isHidden": false,
+          "abilityType": "secondary"
+        },
+        {
+          "name": "Pickpocket",
+          "description": "\tSteals foe's item \twhen contacted.",
+          "isHidden": true,
+          "abilityType": "hidden"
+        }
+      ],
+      "faithfulAbilities": [
+        {
+          "name": "Inner Focus",
+          "description": "\tProtects it from \tflinching.",
+          "isHidden": false,
+          "abilityType": "primary"
+        },
+        {
+          "name": "Keen Eye",
+          "description": "\tPrevents foes from \tlowering accuracy.",
+          "isHidden": false,
+          "abilityType": "secondary"
+        },
+        {
+          "name": "Pickpocket",
+          "description": "\tSteals foe's item \twhen contacted.",
+          "isHidden": true,
+          "abilityType": "hidden"
+        }
+      ],
+      "updatedAbilities": [],
+      "growthRate": "Medium Slow",
+      "eggGroups": [
+        "Field",
+        "Field"
+      ],
+      "evYield": "1 Spe",
       "types": [
+        "Poison",
+        "Fighting"
+      ],
+      "updatedTypes": [
         "Poison",
         "Fighting"
       ],
