fix: enhance form stats handling by incorporating base stats and improving logging

--- a/output/pokemon/sneasel.json
+++ b/output/pokemon/sneasel.json
@@ -1095,7 +1095,11 @@
           "Poison",
           "Fighting"
         ],
-        "locations": []
+        "locations": [],
+        "height": 9,
+        "weight": 270,
+        "bodyColor": "Gray",
+        "bodyShape": "Bipedal Tail"
       }
     },
     "Plain": {
@@ -1122,7 +1126,11 @@
         },
         "hatchRate": "Unknown",
         "evYield": "None",
-        "locations": []
+        "locations": [],
+        "height": 9,
+        "weight": 270,
+        "bodyColor": "Gray",
+        "bodyShape": "Bipedal Tail"
       }
     }
   }
