Enhance PokemonDetail component to provide safe defaults for missing detailedStats fields

--- a/output/pokemon/jynx.json
+++ b/output/pokemon/jynx.json
@@ -275,7 +275,15 @@
     },
     {
       "name": "Draining Kiss",
-      "level": 28
+      "level": 28,
+      "info": {
+        "description": "No description available.",
+        "type": "Unknown",
+        "pp": 0,
+        "power": 0,
+        "accuracy": 0,
+        "category": "Unknown"
+      }
     },
     {
       "name": "Psybeam",
