--- a/output/pokemon/sneasel.json
+++ b/output/pokemon/sneasel.json
@@ -776,6 +776,118 @@
   "eggMoves": [],
   "locations": [
     {
+      "area": "ICE_PATH_B1F",
+      "method": "grass",
+      "time": "nite",
+      "level": "32",
+      "chance": 2,
+      "formName": null
+    },
+    {
+      "area": "ICE_PATH_B2F_MAHOGANY_SIDE",
+      "method": "grass",
+      "time": "nite",
+      "level": "32",
+      "chance": 3,
+      "formName": null
+    },
+    {
+      "area": "ICE_PATH_B2F_MAHOGANY_SIDE",
+      "method": "grass",
+      "time": "nite",
+      "level": "34",
+      "chance": 2,
+      "formName": null
+    },
+    {
+      "area": "ICE_PATH_B2F_BLACKTHORN_SIDE",
+      "method": "grass",
+      "time": "nite",
+      "level": "32",
+      "chance": 3,
+      "formName": null
+    },
+    {
+      "area": "ICE_PATH_B2F_BLACKTHORN_SIDE",
+      "method": "grass",
+      "time": "nite",
+      "level": "34",
+      "chance": 2,
+      "formName": null
+    },
+    {
+      "area": "ICE_PATH_B3F",
+      "method": "grass",
+      "time": "nite",
+      "level": "32",
+      "chance": 5,
+      "formName": null
+    },
+    {
+      "area": "ICE_PATH_B3F",
+      "method": "grass",
+      "time": "nite",
+      "level": "34",
+      "chance": 3,
+      "formName": null
+    },
+    {
+      "area": "ICE_PATH_B3F",
+      "method": "grass",
+      "time": "nite",
+      "level": "36",
+      "chance": 2,
+      "formName": null
+    },
+    {
+      "area": "SILVER_CAVE_OUTSIDE",
+      "method": "grass",
+      "time": "nite",
+      "level": "75",
+      "chance": 3,
+      "formName": null
+    },
+    {
+      "area": "SILVER_CAVE_OUTSIDE",
+      "method": "grass",
+      "time": "nite",
+      "level": "75",
+      "chance": 2,
+      "formName": null
+    },
+    {
+      "area": "ROUTE_28",
+      "method": "grass",
+      "time": "nite",
+      "level": "71",
+      "chance": 3,
+      "formName": null
+    },
+    {
+      "area": "ROUTE_28",
+      "method": "grass",
+      "time": "nite",
+      "level": "71",
+      "chance": 2,
+      "formName": null
+    },
+    {
+      "area": "ICE_ISLAND",
+      "method": "grass",
+      "time": "nite",
+      "level": "Badge Level - 2",
+      "chance": 30,
+      "formName": null
+    },
+    {
+      "area": "ICE_ISLAND",
+      "method": "grass",
+      "time": "nite",
+      "level": "Badge Level - 1",
+      "chance": 30,
+      "formName": null
+    },
+    {
       "area": "Snowtop Mountain Inside",
       "method": "hidden_grotto",
       "time": "rare",
@@ -1107,6 +1219,54 @@
         "bodyColor": "Gray",
         "bodyShape": "Bipedal Tail"
       }
+    },
+    "hisuian": {
+      "moves": [],
+      "nationalDex": 215,
+      "johtoDex": 245,
+      "types": [
+        "Dark",
+        "Ice"
+      ],
+      "updatedTypes": [
+        "Dark",
+        "Ice"
+      ],
+      "evolution": {
+        "methods": [],
+        "chain": [
+          "Sneaselhisuian"
+        ],
+        "chainWithMethods": {
+          "Sneaselhisuian": []
+        }
+      },
+      "forms": {},
+      "baseStats": {
+        "hp": 0,
+        "attack": 0,
+        "defense": 0,
+        "speed": 0,
+        "specialAttack": 0,
+        "specialDefense": 0,
+        "total": 0
+      },
+      "catchRate": 255,
+      "baseExp": 0,
+      "heldItems": [],
+      "abilities": [],
+      "faithfulAbilities": [],
+      "updatedAbilities": [],
+      "growthRate": "Medium Fast",
+      "eggGroups": [],
+      "genderRatio": {
+        "male": 0,
+        "female": 0
+      },
+      "hatchRate": "Unknown",
+      "evYield": "None",
+      "locations": [],
+      "formName": "hisuian"
     },
     "Plain": {
       "name": "Sneasel plain",
