--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "node scripts/generate-build-info.mjs && ./scripts/copy-dex-files.sh && next build",
     "start": "next start",
     "lint": "next lint",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
+    "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
     "extract": "ts-node extract_pokemon_data.ts && ts-node extract_locations.ts",
     "crop": "ts-node crop_top_sprite.ts",
     "test": "vitest run",
@@ -48,6 +50,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
     "lightningcss": "^1.30.1",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.5",
