Refactor extractor paths to use polishedcrystal directory
- Updated paths in formExtractors, itemExtractors, locationExtractors, martExtractors, moveExtractors, pokedexExtractors, statsExtractors, tmHmExtractors, and trainerExtractors to point to the polishedcrystal data structure instead of the previous rom structure.
- Added a new script command "update-rom" in package.json to facilitate pulling the latest changes from the polishedcrystal repository.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
     "extract": "ts-node extract_pokemon_data.ts && ts-node extract_locations.ts",
     "crop": "ts-node scripts/crop_top_sprite.ts",
+    "update-rom": "cd polishedcrystal && git pull origin master && cd ..",
     "test": "vitest run",
     "test:watch": "vitest"
   },
