--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
+    "nuqs": "^2.4.3",
     "pngjs": "^7.0.0",
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
