Refactor Pokémon form names to lowercase
- Updated form names for various Pokémon to use lowercase for consistency.
- Changed "Galarian" to "galarian" for Articuno, Corsola, Farfetch'd, Meowth, Moltres, Zapdos, and others.
- Changed "Alolan" to "alolan" for Diglett, Dugtrio, Exeggutor, Geodude, Golem, Graveler, Grimer, Growlithe, Marowak, Muk, Ninetales, Persian, Raichu, Rapidash, Raticate, Rattata, Sandshrew, Sandslash, Slowbro, Slowking, Slowpoke, Sneasel, Tauros, Typhlosion, Uraluna, Voltorb, Vulpix, Weezing, Wooper.
- Standardized "Plain" to "plain" for all relevant Pokémon forms.

--- a/output/pokemon/sneasel.json
+++ b/output/pokemon/sneasel.json
@@ -1305,9 +1305,9 @@
     }
   },
   "forms": {
-    "Hisuian": {
+    "hisuian": {
       "name": "sneasel hisuian",
-      "formName": "Hisuian",
+      "formName": "hisuian",
       "nationalDex": 215,
       "johtoDex": 245,
       "types": [
@@ -2020,9 +2020,9 @@
         "bodyShape": "Bipedal Tail"
       }
     },
-    "Plain": {
+    "plain": {
       "name": "sneasel plain",
-      "formName": "Plain",
+      "formName": "plain",
       "nationalDex": 215,
       "johtoDex": 245,
       "types": [],
