Add Hisuian forms and locations for various Pokémon; update Tauros moves and normalize URLs
- Added locations for Hisuian forms of Growlithe, Qwilfish, Sneasel, and Tauros.
- Updated Tauros moves, changing several attacks and their properties.
- Added empty locations for Arcanine, Electrode, Typhlosion, and Voltorb.
- Normalized Pokémon URL keys for Tauros forms.
- Updated Pokémon level moves JSON to reflect new form names and locations.
- Removed redundant Hisuian form entries from Pokémon locations JSON.

--- a/output/pokemon/sneasel.json
+++ b/output/pokemon/sneasel.json
@@ -2018,7 +2018,98 @@
         "weight": 270,
         "bodyColor": "Gray",
         "bodyShape": "Bipedal Tail"
-      }
+      },
+      "locations": [
+        {
+          "area": "snowtop_mountain_inside",
+          "method": "grass",
+          "time": "morn",
+          "level": "Badge Level + 1",
+          "chance": 3,
+          "formName": "hisuian"
+        },
+        {
+          "area": "snowtop_mountain_inside",
+          "method": "grass",
+          "time": "morn",
+          "level": "Badge Level + 3",
+          "chance": 2,
+          "formName": "hisuian"
+        },
+        {
+          "area": "snowtop_mountain_inside",
+          "method": "grass",
+          "time": "day",
+          "level": "Badge Level + 1",
+          "chance": 3,
+          "formName": "hisuian"
+        },
+        {
+          "area": "snowtop_mountain_inside",
+          "method": "grass",
+          "time": "day",
+          "level": "Badge Level + 3",
+          "chance": 2,
+          "formName": "hisuian"
+        },
+        {
+          "area": "snowtop_mountain_inside",
+          "method": "grass",
+          "time": "nite",
+          "level": "Badge Level + 1",
+          "chance": 3,
+          "formName": "hisuian"
+        },
+        {
+          "area": "snowtop_mountain_inside",
+          "method": "grass",
+          "time": "nite",
+          "level": "Badge Level + 3",
+          "chance": 2,
+          "formName": "hisuian"
+        },
+        {
+          "area": "dim_cave_4f",
+          "method": "grass",
+          "time": "nite",
+          "level": "51",
+          "chance": 30,
+          "formName": "hisuian"
+        },
+        {
+          "area": "dim_cave_5f",
+          "method": "grass",
+          "time": "morn",
+          "level": "50",
+          "chance": 30,
+          "formName": "hisuian"
+        },
+        {
+          "area": "dim_cave_5f",
+          "method": "grass",
+          "time": "day",
+          "level": "50",
+          "chance": 30,
+          "formName": "hisuian"
+        },
+        {
+          "area": "dim_cave_5f",
+          "method": "grass",
+          "time": "nite",
+          "level": "50",
+          "chance": 30,
+          "formName": "hisuian"
+        },
+        {
+          "area": "Sinjoh Ruins",
+          "method": "hidden_grotto",
+          "time": "rare",
+          "level": "Badge Level + 5",
+          "chance": 5,
+          "rareItem": "Ice Stone",
+          "formName": "hisuian"
+        }
+      ]
     },
     "plain": {
       "name": "sneasel plain",
