--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
     "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
     "extract": "ts-node extract_pokemon_data.ts && ts-node extract_locations.ts",
+    "extract-rival": "ts-node extract_rival.ts",
     "optimize": "npm run create-manifests && npm run compress-data",
     "create-manifests": "ts-node scripts/create-manifests.ts",
     "compress-data": "ts-node scripts/compress-pokemon-data.ts",
