--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "optimize": "npm run create-manifests && npm run compress-data",
     "create-manifests": "ts-node scripts/create-manifests.ts",
     "compress-data": "ts-node scripts/compress-pokemon-data.ts",
-    "do-the-thing": "npm run extract && npm run optimize && npx tsx restructure_locations.ts",
+    "do-the-thing": "npm run extract && npm run optimize && npx tsx restructure_locations.ts && sh scripts/copy-dex-files.sh",
     "crop": "ts-node scripts/crop_top_sprite.ts",
     "update-rom": "cd polishedcrystal && git pull origin master && cd ..",
     "test": "vitest run",
