--- a/package.json
+++ b/package.json
@@ -47,7 +47,10 @@
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^2.15.4",
+    "remark-gfm": "^4.0.1",
+    "remark-wiki-link": "^2.0.1",
     "sharp": "^0.34.2",
     "tailwind-merge": "^3.3.1"
   },
