feat: add support for faithful and polished base stats in Pokémon data
- Extended the CompressedPokemon interface to include optional faithfulBaseStats and polishedBaseStats.
- Implemented loading of detailed stats data from JSON file.
- Updated the compressPokemonFile function to extract and include faithful and polished base stats when compressing Pokémon data.
- Modified the Pokémon detail page to display faithful and polished base stats.
- Enhanced the Pokémon form component to allow toggling between different base stats.
- Updated stats extraction logic to handle conditional base stats for Pokémon.
- Adjusted types to accommodate new base stats structure.

--- a/output/pokemon/jynx.json
+++ b/output/pokemon/jynx.json
@@ -84,7 +84,16 @@
     "height": 14,
     "weight": 406,
     "bodyShape": "Bipedal",
-    "bodyColor": "Red"
+    "bodyColor": "Red",
+    "polishedBaseStats": {
+      "hp": 70,
+      "attack": 60,
+      "defense": 40,
+      "speed": 95,
+      "specialAttack": 120,
+      "specialDefense": 100,
+      "total": 485
+    }
   },
   "evolution": {
     "methods": [],
