--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "crop": "ts-node scripts/crop_top_sprite.ts",
     "update-rom": "cd polishedcrystal && git pull origin master && cd ..",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "analyze": "ANALYZE=true npm run build"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.11",
@@ -57,6 +58,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@next/bundle-analyzer": "^15.4.5",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/pngjs": "^6.0.5",
