--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "node scripts/generate-build-info.mjs && ./scripts/copy-dex-files.sh && next build",
+    "build": "node scripts/generate-build-info.mjs && npm run process-sprites && ./scripts/copy-dex-files.sh && next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
@@ -16,6 +16,7 @@
     "compress-data": "ts-node scripts/compress-pokemon-data.ts",
     "do-the-thing": "npm run extract && npm run optimize && npx tsx restructure_locations.ts && sh scripts/copy-dex-files.sh",
     "crop": "ts-node scripts/crop_top_sprite.ts",
+    "process-sprites": "python process_sprites.py --all",
     "update-rom": "cd polishedcrystal && git pull origin master && cd ..",
     "test": "vitest run",
     "test:watch": "vitest",
