feat: Add FAQ page and emulator recommendations component

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "node scripts/generate-build-info.mjs && npm run process-sprites && ./scripts/copy-dex-files.sh && next build",
+    "build": "node scripts/generate-build-info.mjs && ./scripts/copy-dex-files.sh && next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
@@ -14,7 +14,7 @@
     "optimize": "npm run create-manifests && npm run compress-data",
     "create-manifests": "ts-node scripts/create-manifests.ts",
     "compress-data": "ts-node scripts/compress-pokemon-data.ts",
-    "do-the-thing": "npm run extract && npm run optimize && npx tsx restructure_locations.ts && sh scripts/copy-dex-files.sh",
+    "do-the-thing": "npm run extract && npm run optimize && npx tsx restructure_locations.ts && npm run process-sprites && sh scripts/copy-dex-files.sh",
     "crop": "ts-node scripts/crop_top_sprite.ts",
     "process-sprites": "python process_sprites.py --all",
     "update-rom": "cd polishedcrystal && git pull origin master && cd ..",
@@ -32,6 +32,7 @@
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
